# local_code_assistant

./: .gitignore  MCP_SERVER.md  PATCH_TRUNCATION_DEBUG.md  README.md  VERBOSE_MODE_GUIDE.md  VERBOSE_MODE_QUICK_REF.md  VERBOSE_MODE_SUMMARY.md  pyproject.toml  test_context_optimization.py  verbose_mode_demo.py  verify_verbose_mode.py
examples/: README.md  claude_config.example.json  mcp_usage_example.py
local_code_assistant/: agent.py  cli.py  mcp_server.py  mcp_server_standalone.py  ollama_client.py  prompts.py  repo.py
