[project]
name = "local-code-assistant"
version = "0.1.0"
description = "Local code assistant using Ollama and repository tools"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
local-code-assistant = "local_code_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
